deploy/registry/local/os/route.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: v1
kind: Route
metadata:
  name: che-plugin-registry
spec:
  to:
    kind: Service
    name: che-plugin-registry
  port:
   targetPort: 8080
